# haptics_pointcloud

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.py  vcpkg.json
funnels/: Funnel.STL
lab4/: CMakeLists.txt  Touch.cpp  Touch.hpp  Touch_bindings.cpp  haptics.cpp  haptics.hpp
